# MP3-Player-ESP32C3

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  idf_component.yml  main.c  upload.html
